# Wave_func

./: CMakeLists.txt  c.cpp  header.cpp  main.cpp
